--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -3,36 +3,6 @@ b {
     margin-right: 5px;
 }
 
-img {
-    display: block;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    padding: 5px;
-}
-.item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: none;
-    border-radius: 0px;
-    transition-property: background-color, box-shadow, border-radius;
-    transition: 300ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.item:hover {
-    background-color: rgba(3, 137, 226, 0.83);
-    border-radius: 50px;
-    box-shadow: 5px 4px 9px 0px rgba(0, 0, 0, 0.65);
-}
-.name {
-    text-align: left;
-    width: 180px;
-}
-.number {
-    width: 160px;
-    text-align: right;
-    font-weight: bold;
-}
 .wrapper {
     display: flex;
     align-items: center;
@@ -47,7 +17,7 @@ img {
     width: 32px;
     height: 32px;
     padding: 0;
-    margin: 5px;
+    margin: 0;
     border: none;
     border-radius: 4px;
     background-color: transparent;
