--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,6 +1,7 @@
 .list {
     display: flex;
     justify-content: space-between;
+    width: 400px;
     flex-direction: column;
     padding: 0;
     margin: 0;
@@ -9,6 +10,10 @@
 }
 .item {
     display: flex;
+    width: 400px;
     padding: 2px 0;
     justify-content: space-between;
 }
+
+
+
